[package]
name = "k8s-audit-apis"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[features]
default = ["serde", "v1", "validation"]  # 修改这里：默认包含所有特性
serde = ["dep:serde", "dep:serde_json"]
v1 = ["serde"]  # v1 模块需要 serde 支持
validation = ["serde", "thiserror"]  # validation 可能需要错误处理
thiserror = ["dep:thiserror"]

[dependencies]
k8s-openapi = { version = "0.21.1", default-features = false, features = ["v1_24"] }
once_cell = "1.18"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
thiserror = { version = "1.0", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.7", features = ["v4", "serde"] }

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
required-features = ["serde", "v1"]  # 可能需要 v1 特性

[[example]]
name = "json_demo"
path = "examples/json_demo.rs"
required-features = ["serde", "v1"]  # 可能需要 v1 特性