[package]
name = "k8s-audit-core"
version = "0.1.0"
edition = "2021"
description = "Kubernetes审计日志核心模块的Rust实现"
license = "Apache-2.0"
authors = ["Kubernetes Authors"]
repository = "https://github.com/kubernetes/kubernetes"
homepage = "https://kubernetes.io"
keywords = ["kubernetes", "audit", "logging", "security"]
categories = ["api-bindings", "web-programming"]

[lib]
name = "k8s_audit_core"
path = "src/lib.rs"

# 主依赖
[dependencies]
k8s-audit-apis = { path = "../k8s-audit-apis", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }

# 可选：如果使用tokio进行异步处理
tokio = { version = "1.0", features = ["full"], optional = true }

# 开发依赖
[dev-dependencies]
tempfile = "3.3"